# plainbench

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  LICENSE  README.md  TESTING.md  coverage.json  plainbench.yaml.example  pyproject.toml
.github/workflows/: ci.yml  lint.yml  pr-checks.yml  test.yml
docs/: TEST_REPORT.md  isolation-implementation.md  mock-datastores.md  quickstart.md  research.md  user-guide.md
docs/architecture/: configuration-schema.md  repository-structure.md  technical-specification.md
docs/testing/: TEST_SUITE_SUMMARY.md  test-strategy.md
examples/: README.md  algorithm_comparison.py  basic_decorator.py  compare_algorithms.py  database_queries.py  infrastructure_profiles.py  isolation_comparison.py  isolation_demo.py  mock_datastores.py  mock_latency_simulation.py  queue_benchmarking.py  realistic_ecommerce_app.py  shell_commands.py  tracked_benchmark.py
plainbench/: __init__.py  __version__.py  comparison.py  demo.py
plainbench/analysis/: __init__.py  comparison.py
plainbench/cli/: __init__.py  main.py
plainbench/cli/commands/: __init__.py
plainbench/config/: __init__.py  settings.py
plainbench/decorators/: __init__.py  benchmark.py
plainbench/isolation/: __init__.py  base.py  factory.py  maximum.py  minimal.py  moderate.py  system_utils.py
plainbench/metrics/: __init__.py  base.py  cpu.py  io.py  memory.py  registry.py  timing.py
plainbench/mocks/: __init__.py  base.py  decorators.py  kafka.py  postgres.py  redis.py
plainbench/shell/: __init__.py  monitor.py  results.py  runner.py
plainbench/storage/: __init__.py  database.py  models.py  schema.py
plainbench/storage/migrations/: __init__.py
plainbench/utils/: __init__.py  git.py  platform.py
tests/: __init__.py  conftest.py
tests/fixtures/: README.md
tests/integration/: test_cli_integration.py  test_decorator_e2e.py  test_demo.py  test_migrations.py  test_mock_kafka_integration.py  test_mock_postgres_integration.py  test_mock_redis_integration.py  test_shell_e2e.py
tests/unit/: test_analysis.py  test_cli.py  test_comparison.py  test_config.py  test_decorators.py  test_isolation.py  test_metrics.py  test_mocks.py  test_profiles.py  test_shell.py  test_shell_real.py  test_storage.py
